# CloudSentinel

./: .dockerignore  .env.example  .gitignore  .golangci.yml  CHANGELOG.md  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml  release.yml
backend/: README.md
backend/ai/: Dockerfile  README.md  pyproject.toml
backend/ai/app/: main.py
backend/ai/app/routers/: health.py
backend/ai/tests/: test_health.py
backend/api/: Dockerfile  README.md  go.mod
backend/api/cmd/server/: main.go
backend/api/internal/handlers/: health.go  health_test.go
backend/worker/: Dockerfile  README.md  go.mod
backend/worker/cmd/worker/: main.go
backend/worker/internal/jobs/: health.go
config/: dev.env  prod.env  staging.env
deploy/: README.md
frontend/: .prettierignore  Dockerfile  README.md  package-lock.json  package.json
frontend/tests/: health.test.js
infra/: README.md  docker-compose.yml
infra/cloudformation/: README.md  guard-scan-role.yaml
infra/cloudsentinel-template/: README.md  main.tf  outputs.tf  variables.tf
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf
scripts/: bootstrap-vps.sh  deploy.sh  pre-deploy-check.sh  rollback.sh
